--- a/npm/package.json
+++ b/npm/package.json
@@ -6,7 +6,14 @@
   "scripts": {
     "test": "tap Tap.test.js"
   },
-  "author": "",
+  "keywords": [
+    "human",
+    "test",
+    "testing",
+    "workflow",
+    "manual"
+  ],
+  "author": "tremho",
   "license": "ISC",
   "devDependencies": {
     "tap": "^14.10.8"
