--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "devDependencies": {
     "inchjs": "^0.4.1",
+    "tap": "^14.10.8",
     "ts-clear-classdoc": "^1.0.1",
     "typescript": "^4.0.3"
   },
