Update npm readme; add screenshots

--- a/.gitIgnore
+++ b/.gitIgnore
@@ -2,13 +2,14 @@
 .DS_Store
 npm/ht-app
 npm/index.js
-npm/example/
+npm/example
 node_modules/
 build/
 ThunderBolt/build/
 ThunderBolt/css/
 ThunderBolt/dist/
 ThunderBolt/electronMain/build/
+ThunderBolt/electronMain/.inch.config.json
 ThunderBolt/electronMain/release-builds/
 ThunderBolt/node_modules/
 ThunderBolt/electronMain/node_modules/
