New download bundle npm install support

--- a/npm/package.json
+++ b/npm/package.json
@@ -4,6 +4,7 @@
   "description": "Support for human-aided testing tasks in test frameworks",
   "main": "index.js",
   "scripts": {
+    "install": "./download-ht-app.sh",
     "test": "tap Tap.test.js"
   },
   "keywords": [
