--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "dev-start": "here=`pwd`; npm run build && cd ThunderBolt/electronMain; npm run package && cd $here; npm run start",
     "dev-build": "here=`pwd`; npm run build && cd ThunderBolt/electronMain; npm run package && cd $here; inchjs",
     "gen-npm": "npm run dev-build && tsccd ./build && npm run x-gen-npm",
-    "x-gen-npm": "cd npm && rm example ht-app index.js; ln -s ../ThunderBolt/electronMain/release-builds ht-app && ln -s ../build/ExchangeFlow.js index.js && ln -s ../example example && npm i && documentation readme index.js --section=API",
-    "publish": "npm run gen-npm && rm -fr publish-temp; mkdir publish-temp; cd publish-temp; cp -r ../npm .; cd npm && npm publish . && echo \"Don't forget to release a new ht-app.tgz on GitHub\""
+    "x-gen-npm": "cd npm && rm example ht-app index.js; ln -s ../ThunderBolt/electronMain/release-builds ht-app && ln -s ../build/ExchangeFlow.js index.js && ln -s ../example example && documentation readme index.js --section=API",
+    "publish": "npm run gen-npm && rm -fr publish-temp; mkdir publish-temp; cd publish-temp; cp -r ../npm .; cd npm && rm -fr ./ht-app &&  npm publish . && echo \"Don't forget to release a new ht-app.tgz on GitHub\""
   },
   "keywords": [
     "Manual",
