--- a/.gitIgnore
+++ b/.gitIgnore
@@ -2,6 +2,9 @@
 .DS_Store
 npm/ht-app
 npm/index.js
+npm/ExchangeCommon.js
+npm/ExchangeCommon.js.map
+npm/ExchangeFlow.js.map
 npm/example
 node_modules/
 build/
