--- a/ThunderBolt/electronMain/package.json
+++ b/ThunderBolt/electronMain/package.json
@@ -24,5 +24,7 @@
     "electron": "^10.1.0",
     "typescript": "^4.0.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "electron-settings": "^4.0.2"
+  }
 }
